next13-demo/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: next13-demo
  labels:
    istio-injection: enabled
