next13-demo/templates/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: next13-demo
  namespace: next13-demo
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingress/ingress-gateway
  http:
  - route:
    - destination:
        host: next13-demo
        port:
          number: 3000
